# terragrunt

./: .env.example  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  flake.nix  pyproject.toml  trivy.yaml
.circleci/: config.yml
.github/workflows/: build.yml  cci-trigger.yaml
