[tool.poetry]
name = "pe_env"
version = "0.1.0"
description = "PE environment"
authors = ["Ariel Richtman <ariel.richtman@silverrailtech.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pymarkdown]
plugins.line-length.line_length = 160
plugins.line-length.code_block_line_length = 160
